update on headers and feedback

--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
             </div>
         </div>
     </div>
+    <div class="header_mobile" style="display: none;">
+        <div class="crayond_logo_mobile">
+            <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+        </div>
+        <div class="icon-container">
+            <div id="menuicon">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            </div>
+        </div>
+        <div class="mobile-menu">
+            <ul class="menu">
+            <li class="menu-item"><a href="./who-we-are">Who we are</a>
+            </li>
+            <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            </li>
+            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
+            </li>
+            <li class="menu-item"><a href="./contact">Contact</a>
+            </li>
+            <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+                <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
+            </li>
+            </ul>
+        </div>
+    </div>
     <!-- end -->
     <!-- background video -->
     <!-- <section class="first_section video_player" >
@@ -159,7 +185,7 @@
                 <h1 class="fontGraphikSemibold">
                     Who you are?
                 </h1>
-                <img alt="line 2" src="./images/line-2.png" />
+                <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 <!-- <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> -->
@@ -224,7 +250,7 @@
                     <h1 class="fontGraphikSemibold">
                         Why us?
                     </h1>
-                    <img alt="line-3" src="./images/line-3.png" />
+                    <img alt="line-3" class="divider_line" src="./images/line-3.png" />
                     <p class="banner--text fontLatoRegular">
                         We are creators at heart. For each new product we craft, we offer innovation,<br/> creativity and user friendly design.
                     </p>
@@ -242,7 +268,7 @@
                             <h1 class="fontGraphikSemibold">Build products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <img alt="line-left" src="./images/line-left.png" />
+                        <img alt="line-left" class="divider_line" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -279,7 +305,7 @@
                             <h1 class="fontGraphikSemibold">Build better, with modern engineering</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                             <img alt="line-left" src="./images/line-left.png" />
+                             <img alt="line-left" class="divider_line" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -311,7 +337,7 @@
                             <h1 class="fontGraphikSemibold">Launch early, reach your customers first</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img alt="line-lef" src="./images/line-left.png" />
+                                <img alt="line-lef" class="divider_line" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -350,7 +376,7 @@
                             <h1 class="fontGraphikSemibold">And finally, no pricing surprises.</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img alt="line-left" src="./images/line-left.png" />
+                                <img alt="line-left" class="divider_line" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -379,7 +405,7 @@
                 <h1 class="fontGraphikSemibold">
                         Our secret
                 </h1>
-                <img alt="line-3" src="./images/line-3.png" />
+                <img alt="line-3" class="divider_line" src="./images/line-3.png" />
                 <p class="banner--text fontLatoRegular">
                         The core pieces that turn a puzzle into a wholesome product.
                 </p>
