--- a/opportunities.html
+++ b/opportunities.html
@@ -98,6 +98,32 @@
           </div>
       </div>
   </div>
+  <div class="header_mobile" style="display: none;">
+      <div class="crayond_logo_mobile">
+          <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+      </div>
+      <div class="icon-container">
+          <div id="menuicon">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          </div>
+      </div>
+      <div class="mobile-menu">
+          <ul class="menu">
+          <li class="menu-item"><a href="./who-we-are">Who we are</a>
+          </li>
+          <li class="menu-item"><a href="./opportunities">Opportunities</a>
+          </li>
+          <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
+          </li>
+          <li class="menu-item"><a href="./contact">Contact</a>
+          </li>
+          <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+              <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
+          </li>
+          </ul>
+      </div>
+  </div>
   <!-- end -->
  <div class="col-md-12 col-xs-12 col-sm-12 title">
     <!-- <h1 style="color: #fff;font-size: 42px;text-shadow: 1.5px 4px 1.5px #00000087;">The best way to predict the future is to create it.</h1> -->
