--- a/who-we-are.html
+++ b/who-we-are.html
@@ -97,43 +97,30 @@
         </div>
     </div>
     <div class="header_mobile" style="display: none;">
-        <!-- <div class="container"> -->
-            <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="row">
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-6 col-lg-6 col-xl-6 logo_mobile">
-                        <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
-                    </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-6 col-lg-6 col-xl-6 header_mobile_menu">
-                        <span><i class="fa fa-bars" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-            </div> -->
-            <div class="crayond_logo_mobile">
-                <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+        <div class="crayond_logo_mobile">
+            <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+        </div>
+        <div class="icon-container">
+            <div id="menuicon">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
             </div>
-            <div class="icon-container">
-                <div id="menuicon">
-                <div class="bar bar1"></div>
-                <div class="bar bar2"></div>
-                </div>
-            </div>
-            <div class="mobile-menu">
-                <ul class="menu">
-                <li class="menu-item"><a href="./who-we-are">Who we are</a>
-                </li>
-                <li class="menu-item"><a href="./opportunities">Opportunities</a>
-                </li>
-                <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
-                </li>
-                <li class="menu-item"><a href="./contact">Contact</a>
-                </li>
-                <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
-                    <!-- <a href="#">Contact</a> -->
-                    <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
-                </li>
-                </ul>
-            </div>
-        <!-- </div> -->
+        </div>
+        <div class="mobile-menu">
+            <ul class="menu">
+            <li class="menu-item"><a href="./who-we-are">Who we are</a>
+            </li>
+            <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            </li>
+            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
+            </li>
+            <li class="menu-item"><a href="./contact">Contact</a>
+            </li>
+            <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+                <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
+            </li>
+            </ul>
+        </div>
     </div>
 
     <!-- end -->
@@ -269,18 +256,22 @@
                 </div>
                 
                 <!-- Left and right controls -->
-                <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                    <span class="carousel-control-prev-icon" style="color: gray;" ></span>
-                    <span>
-                        <i class="fa fa-chevron-left" aria-hidden="true" style="color: #000;" ></i>
-                    </span>
-                </a>
-                <a class="carousel-control-next" href="#demo" data-slide="next">
-                    <span class="carousel-control-next-icon" style="color: gray;" ></span>
-                    <span>
+                <div class="carousel-control-prev" style="opacity: 1;left: -7px;display: none;">
+                    <a href="#demo" data-slide="prev" style="text-decoration: none;">
+                        <!-- <span class="carousel-control-prev-icon" style="color: gray;" ></span> -->
+                        <span class="mobile_arrow_left">
+                            <i class="fa fa-chevron-left" aria-hidden="true" style="color: #000;" ></i>
+                        </span>
+                    </a>
+                </div>
+                <div class="carousel-control-next" style="opacity: 1;right: -7px;display: none;">
+                <a class="" href="#demo" data-slide="next" style="text-decoration: none;">
+                    <!-- <span class="carousel-control-next-icon" style="color: gray;" ></span> -->
+                    <span class="mobile_arrow_right">
                         <i class="fa fa-chevron-right" aria-hidden="true" style="color: #000;"></i>
                     </span>
-                </a> -->
+                </a>
+                </div>
                 </div>     
             </div>
         </div>
@@ -541,14 +532,6 @@
         
         lastScrollTop = st;
     }
-
-    (function () {
-  const header = document.querySelector('.header_mobile');
-	const icon = document.querySelector('.icon-container');
-	icon.onclick = function () {
-		header.classList.toggle('menu-open');
-	}
-}());
     var data = { "2012": [
                         {
                         "date": "AUG 2012",
