added mobile menu and slider in whoacacssa

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                         <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
-                        <span><a class="fontLatoRegular" href="/">Blogs</a></span>
-                        <span><a class="fontLatoRegular" href="/">Contact</a></span>
+                        <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
+                        <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack">SIGN IN</button>
@@ -114,7 +114,7 @@
             </li>
             <li class="menu-item"><a href="./opportunities">Opportunities</a>
             </li>
-            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
+            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
             </li>
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
@@ -606,7 +606,7 @@
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
                     <a href="https://medium.com/crayond" target="_blank"  alt="Company" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
-                        Blogs
+                        Blog
                      </span>
                      </a>
                     <!-- <ul>
