update on fresh chat

--- a/opportunities.html
+++ b/opportunities.html
@@ -60,6 +60,10 @@
 
   <!-- <link href="./plugin/aos.css" rel="stylesheet"> -->
 
+  <!-- Freshchat -->
+  <script src="https://wchat.freshchat.com/js/widget.js"></script>
+  <!-- Freshchat -->
+
 
 
 </head>
@@ -675,6 +679,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="./plugin/aos.js"></script>
   <script src="./plugin/loader.js"></script>
+  <!-- Freshchat -->
+  <script src="./plugin/freshchat/footer.js"></script>
+  <!-- Freshchat -->
   <script type="text/javascript">
     AOS.init();
     $(document).ready(function(){ 
@@ -724,8 +731,6 @@
     }
   </script>
 
-
-    <!-- Freshchat -->
   
 </body>
 </html>
