--- a/who-we-are.html
+++ b/who-we-are.html
@@ -63,7 +63,9 @@
     <script src="js/vendor/html5shim.js"></script>
     <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
-</head>
+    <!-- Freshchat -->
+    <script src="https://wchat.freshchat.com/js/widget.js"></script>
+    <!-- Freshchat -->
 
 
 <body>
@@ -489,6 +491,9 @@
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
 <script src="./plugin/loader.js"></script>
+<!-- Freshchat -->
+<script src="./plugin/freshchat/footer.js"></script>
+<!-- Freshchat -->
 <script type="text/javascript">
     AOS.init();
 
