--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,33 @@
             </div>
         </div>
     </div>
+
+    <div class="header_mobile" style="display: none;">
+        <div class="crayond_logo_mobile">
+            <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+        </div>
+        <div class="icon-container">
+            <div id="menuicon">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            </div>
+        </div>
+        <div class="mobile-menu">
+            <ul class="menu">
+            <li class="menu-item"><a href="./who-we-are">Who we are</a>
+            </li>
+            <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            </li>
+            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
+            </li>
+            <li class="menu-item"><a href="./contact">Contact</a>
+            </li>
+            <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+                <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
+            </li>
+            </ul>
+        </div>
+    </div>
     <!-- end -->
 
 
@@ -108,7 +135,7 @@
     <!-- <iframe> -->
 
 	<div class="typeform-widget" data-url="https://makesh.typeform.com/to/hAH7QU" data-transparency="50" data-hide-headers=true data-hide-footer=true 
-	style="width: 100%; height: 700px; padding-top: 73px;background-color: bisque;"></div>
+	style="width: 100%; height: 700px; padding-top: 73px;"></div>
 
 
 	
@@ -122,7 +149,7 @@
 	<!-- </iframe> -->
 
     <!-- main footer -->
-    <section class="footer">
+    <section class="footer" style="border-top: 1px solid rgba(25, 34, 79, 0.08);">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
