--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Freshchat -->
+    <script src="https://wchat.freshchat.com/js/widget.js"></script>
+    <!-- Freshchat -->
+
 
 
 </head>
@@ -704,6 +708,9 @@
 <script src="./plugin/bootstrap.min.js"></script>
 <script src="./plugin/aos.js"></script>
 <script src="./plugin/loader.js"></script>
+<!-- // Freshchat -->
+<script src="./plugin/freshchat/footer.js"></script>
+<!-- // Freshchat -->
 <script type="text/javascript">
     AOS.init();
     // Hide Header on on scroll down
