mobile menu update

--- a/index.html
+++ b/index.html
@@ -122,9 +122,16 @@
             </li>
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
-            <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+            <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
-            </li>
+            </li> -->
+            </ul>
+            <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+                <li class="menu-item">
+                    <a>
+                      <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
