--- a/opportunities.html
+++ b/opportunities.html
@@ -116,15 +116,22 @@
           <ul class="menu">
           <li class="menu-item"><a href="./who-we-are">Who we are</a>
           </li>
-          <li class="menu-item"><a href="./opportunities">Opportunities</a>
+          <li class="menu-item active"><a href="./opportunities">Opportunities</a>
           </li>
           <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
           </li>
           <li class="menu-item"><a href="./contact">Contact</a>
           </li>
-          <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+          <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
               <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
-          </li>
+          </li> -->
+          </ul>
+          <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+              <li class="menu-item">
+                  <a>
+                    <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                  </a>
+              </li>
           </ul>
       </div>
   </div>
