update onmobile menu

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                         <div class="row row_mobile" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
                                 <img alt="path-6.svg" src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img alt="ceo.png" src="https://www.crayond.com/crayond2020assets/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img alt="ceo.png" src="./images/Testimonial image.jpg" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
                                 <img alt="path-6-copy" src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
@@ -546,7 +546,7 @@
                         <div class="row" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
                                 <img src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img src="https://www.crayond.com/crayond2020assets/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img src="./images/Testimonial image.jpg" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
                                 <img src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
@@ -558,7 +558,7 @@
     <!-- end -->
     <!-- next_billion -->
     <section class="next_billion">
-        <img data-aos="zoom-out-down" data-aos-duration="3000" alt="oval" src="./images/oval.png" class="ovel" />
+        <img alt="oval" src="./images/oval.png" class="ovel" />
         <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
