--- a/opportunities.html
+++ b/opportunities.html
@@ -539,8 +539,8 @@
 <!-- Start Section -->
 <!-- next_billion -->
 <section class="join_team">
-    <img alt="oval" data-aos="zoom-out-left" data-aos-duration="3000" src="./images/oval.png" class="ovel" />
-    <img alt="oval-copy-6" data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
+    <img alt="oval" src="./images/oval.png" class="ovel" />
+    <img alt="oval-copy-6" data-aos="zoom-out-down" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
     <div class="container billion">
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
             <button class="button fontLatoRegular" style="width: 230px;">Join Us &nbsp <span> </span></button>
