--- a/who-we-are.html
+++ b/who-we-are.html
@@ -250,7 +250,7 @@
                         </div>
                     </div> -->
                 </div>
-                <div class="row arrows">
+                <!-- <div class="row arrows">
                     <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 arrowslist">
                         <a class="left" href="#demo" data-slide="prev">
                             <span>
@@ -263,10 +263,10 @@
                             </span>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 
                 <!-- Left and right controls -->
-                <div class="carousel-control-prev" style="opacity: 1;left: -7px;display: none;">
+                <div class="carousel-control-prev" style="opacity: 1;left: -7px;">
                     <a href="#demo" data-slide="prev" style="text-decoration: none;">
                         <!-- <span class="carousel-control-prev-icon" style="color: gray;" ></span> -->
                         <span class="mobile_arrow_left">
@@ -274,7 +274,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="carousel-control-next" style="opacity: 1;right: -7px;display: none;">
+                <div class="carousel-control-next" style="opacity: 1;right: -7px;">
                 <a class="" href="#demo" data-slide="next" style="text-decoration: none;">
                     <!-- <span class="carousel-control-next-icon" style="color: gray;" ></span> -->
                     <span class="mobile_arrow_right">
@@ -354,7 +354,7 @@
     
     <!-- next_billion -->
     <section class="next_billion">
-        <img data-aos="zoom-out-down" data-aos-duration="3000" alt="oval" src="./images/oval.png" class="ovel" />
+        <img alt="oval" src="./images/oval.png" class="ovel" />
         <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
@@ -638,7 +638,7 @@
             // alert(JSON.stringify(value))
         if (index == 0) {
             var html4 = '<div class="carousel-item active">'+
-                        '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
+                        '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
@@ -647,7 +647,7 @@
                 $(".carousel-inner").append(html4);
         }else{
         var html4 = '<div class="carousel-item">'+
-                        '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
+                        '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
@@ -673,7 +673,7 @@
             // alert(JSON.stringify(value))
         if (index == 0) {
             var html4 = '<div class="carousel-item active">'+
-                        '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
+                        '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
@@ -682,7 +682,7 @@
                 $(".carousel-inner").append(html4);
         }else{
         var html4 = '<div class="carousel-item">'+
-                        '<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 slider_discription">'+
+                        '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
