--- a/opportunities.html
+++ b/opportunities.html
@@ -144,7 +144,8 @@
   <div class="hero">
     <figure>
       <video id="video_hight" loop="loop" muted="muted" autoplay="autoplay">
-        <source src="./images/demonstration.mp4"/>
+        <!-- <source src="./images/demonstration.mp4"/> -->
+        <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"/>
       </video>
       <figcaption>
         <!-- <div class="col-md-12 video_title">
@@ -455,7 +456,7 @@
         <img class="position_img" src="./images/01_front_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Front-End</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/507995-front-end-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/507995-front-end-developer';" >
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645051-front-end-developer')" >
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
       </button>
     </div>
@@ -463,7 +464,7 @@
         <img class="position_img" src="./images/02_back_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Back-End</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521126-back-end-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521126-back-end-developer';">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645045-back-end-developer')">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
       </div>
@@ -471,7 +472,7 @@
         <img class="position_img" src="./images/03_fullstack_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Full-Stack</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521739-full-stack-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521739-full-stack-developer';">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645053-full-stack-developer')">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -479,7 +480,7 @@
         <img class="position_img" src="./images/04_devops_engineer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">DevOps</br>Engineer</h4>
         <!-- <button type="button" class="btn btn-alt">Write to Us</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://www.crayond.com/contact')">
             <span> Write to Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -487,7 +488,7 @@
         <img class="position_img" src="./images/05_ios_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">iOS</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521765-ios-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521765-ios-developer';">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645087-ios-developer')">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -495,7 +496,7 @@
         <img class="position_img" src="./images/06_qa_specialist.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">QA<br/>Specialist</h4>
         <!-- <button type="button" class="btn btn-alt">Write to Us</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://www.crayond.com/contact')">
             <span> Write to Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -503,7 +504,7 @@
         <img class="position_img" src="./images/07_content_writer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Content<br/>Writer</h4>
         <!-- <button type="button" class="btn btn-alt">Write to Us</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645049-content-writer')">
             <span> Write to Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -511,7 +512,7 @@
         <img class="position_img" src="./images/08_visual_designer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Visual<br/>Designer</h4>
         <!-- <button type="button" class="btn btn-alt">Write to Us</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645085-visual-designer')">
             <span> Write to Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
