--- a/who-we-are.html
+++ b/who-we-are.html
@@ -137,8 +137,9 @@
     <!-- background video -->
     <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
-            <video loop="loop" muted="muted" autoplay="autoplay" >
-                <source src="./images/demonstration.mp4" type="video/mp4">
+            <video loop="loop" muted="muted" autoplay="autoplay" style="top: 0;position: absolute;" >
+                <!-- <source src="./images/demonstration.mp4" type="video/mp4"> -->
+                <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"/>
             </video>
         </div>
     </section>
