feedback fix imgae space sda KJCHSDKN

--- a/contact.html
+++ b/contact.html
@@ -83,10 +83,10 @@
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
                         <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                         <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
@@ -94,8 +94,8 @@
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/">Contact</a></span>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
-                        <button class="btn btn-outline-primary fontLatoBlack">SIGN IN</button>
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
+                        <button class="btn btn-outline-primary fontLatoBlack"onclick="window.location.href = './contact'" >TALK TO US</button>
                     </div>
                 </div>
             </div>
