--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
                         <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                         <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
@@ -95,8 +95,8 @@
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
-                        <button class="btn btn-outline-primary fontLatoBlack">SIGN IN</button>
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
+                        <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
                     </div>
                 </div>
             </div>
@@ -160,8 +160,8 @@
                 </p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner__button_div">
-                <button class="banner_button fontLatoBlack">
-                    <span>SCREW IT, LET'S DO IT! &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
+                    <span>LET'S GET STARTED &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                 </button>
             </div>
         </div>
@@ -562,15 +562,16 @@
         <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
-                <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button>
+                <!-- <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button> -->
+                <img src="./images/confetti (1).svg" alt="confetti" />
             </div>
             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
                 <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
-                <button class="banner_button fontLatoBlack">
+                <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
                     <span> 
-                            SCREW IT, LET'S DO IT! &nbsp
+                            TALK TO US &nbsp
                             <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     </span></button>
             </div>
