--- a/opportunities.html
+++ b/opportunities.html
@@ -82,12 +82,12 @@
       <div class="container">
           <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
               <div class="row">
-                  <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
+                  <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
                       <a href="#" class="logo">
                           <img alt="logo-crayond@2x" src="./images/logo-crayond@2x.jpg" />
                       </a>
                   </div>
-                  <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                       <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
                       <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                       <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
@@ -95,8 +95,8 @@
                       <span><a class="fontLatoRegular" href="/">Blogs</a></span>
                       <span><a class="fontLatoRegular" href="/">Contact</a></span>
                   </div>
-                  <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
-                      <button class="btn btn-outline-primary fontLatoBlack">JOIN US</button>
+                  <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
+                      <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'">TALK TO US</button>
                   </div>
               </div>
           </div>
@@ -543,13 +543,13 @@
     <img alt="oval" src="./images/oval.png" class="ovel" />
     <img alt="oval-copy-6" data-aos="zoom-out-down" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
     <div class="container billion">
-        <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
+        <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
             <button class="button fontLatoRegular" style="width: 230px;">Join Us &nbsp <span> </span></button>
-        </div>
+        </div> -->
         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
             <h1 class="fontGraphikSemibold">Interested? We're hiring.</h1>
             <p style="color: #fff;">
-              If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work to change the world, you have a compelling reason to join us.
+              If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work <br/>to change the world, you have a compelling reason to join us.
             </p>
         </div>
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
@@ -559,7 +559,7 @@
         </div>
     </div>
     <img alt="path-3-copy" data-aos="zoom-in-up" data-aos-duration="5000" src="./images/path-3-copy.png" class="path-3" />
-    <img alt="path-3" data-aos="zoom-out-right" data-aos-duration="3000" src="./images/path-3.png" class="path" />
+    <img alt="path-3" data-aos="zoom-in" data-aos-duration="3000" src="./images/path-3.png" class="path" />
 </section>
 <!-- end -->
   <!-- main footer -->
